--- a/components/Headercontact/Headercontact.scss
+++ b/components/Headercontact/Headercontact.scss
@@ -165,6 +165,7 @@ $contentpaddingLarge: 3em;
 }
 
 .arrow {
+    position: absolute;
     display: none;
     bottom: 0;
 
